--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
 		<!-- Footer -->
 		<section class="section-4 has-text-centered container">
-			<p style="color:lightblue">&Copy-right@2018 Sandeep </br>
+			<p style="color:lightblue">&copyCopy-right2018 Sandeep </br>
 			All rights reserved</p>
 
 		</section>
