--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 								<div>
 									<p>
 										My First priority is to code for the web applications.
-									  You can find some of my code samples in my <a href="https://github.com/Sandeep501"> Gitub-account </a>	</p>
+									  You can find some of my code samples in my <a href="https://github.com/Sandeep501"> Github-account </a>	</p>
 								</div>
 							</article>
 						</div>
