--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 				<a class="nav-item" href="#about">About</a>
 				<a class="nav-item" href="#projects">Projects</a>
 				<a class="nav-item" href="#social">Social</a>
+				<a class="nav-item" href="Resume2019.pdf">Resume</a>
 			</div>
 
 			<!-- This "nav-toggle" hamburger menu is only visible on mobile -->
