--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			</div>
 			<div class="container"></br>
 				<p class="intro">
-					Hai,this is Sandeep and i'm a Programmer.I specially write code for web apps using Java_Script  and HTML.
+					Hai, this is Sandeep and i'm a Programmer.I, specially write code for web apps using Java_Script  and HTML.
 	        I am very intrested to code for the web applications because of its instant results.
 				</p>
 			</div>
@@ -130,7 +130,7 @@
 
 		<!-- Footer -->
 		<section class="section-4 has-text-centered container">
-			<p style="color:lightblue">&copyCopy-right2018 Sandeep </br>
+			<p style="color:lightblue">&copyCopy-right2017 Sandeep </br>
 			All rights reserved</p>
 
 		</section>
