--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 			</div>
 			<div class="container"></br>
 				<p class="intro">
-					Hai, this is Sandeep and i'm a Programmer.I, specially write code for web apps using Java_Script  and HTML.
-	        I am very intrested to code for the web applications because of its instant results.
+					Hai, this is Sandeep and i'm a Programmer. I, specially write code for web apps using Java_Script  and HTML.
+	        			I am very intrested to code for the web applications because of its instant results.
 				</p>
 			</div>
 		</section>
@@ -84,7 +84,8 @@
 								<div>
 									<p>
 										My First priority is to code for the web applications.
-									  You can find some of my code samples in my <a href="https://github.com/Sandeep501"> Github-account </a>	</p>
+									  	You can find some of my code samples in my <span><a href="https://github.com/Sandeep501"> Github-account </a></span>	
+									</p>
 								</div>
 							</article>
 						</div>
