--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
 			</div>
 			<div class="container"></br>
 				<p class="intro">
-					Hai, this is Sandeep and i'm a Programmer. I, specially write code for web apps using Java_Script  and HTML.
-	        			I am very intrested to code for the web applications because of its instant results.
+					Hi, this is Sandeep and I'm a Programmer.
 				</p>
 			</div>
 		</section>
@@ -83,7 +82,7 @@
 								</div>
 								<div>
 									<p>
-										My First priority is to code for the web applications.
+										I mostly work on Data Science related projects.
 									  	You can find some of my code samples in my <span><a href="https://github.com/Sandeep501"> Github-account </a></span>	
 									</p>
 								</div>
@@ -101,7 +100,7 @@
 								</div>
 								<div>
 									<p>
-										My second priority is to code for the Native-Apps using a java Script Library or Frame-work called React-Native
+									 Other then Data Science and Machine learning my priority is to code for the Native-Apps using a java Script Library or Frame-work called React-Native
 										which is a Mobo App development for both IOS and Android.
 									</p>
 								</div>
